fixed overflow

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -9,47 +9,19 @@ body{
     font-family: Arial, Helvetica Neue, sans-serif;
 }
 
-/* HEADER 
-header {
-    background: black;
-    background-size: 100%;
-    background-position: center;
-    height: 10px;
-    padding: 20px;
-    text-align: center;
-}
-
-header a{
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-header .logo a{
-    background-image: url("images/covid\ banner.png");
-    background-repeat: no-repeat;
-    background-size: 100px;
-    display: inline-block;
-    height: 80px;
-    left: -480px;
-    position: relative;
-    text-indent: -9999999px;
-    top: -14px;
-    width: 300px;
-}*/
-
 li{
     list-style-type: none;
 }
 #mapid {
-    height: 90vh;
+    height: 80vh;
     position: relative;
+    display: flex;
 }
 
 #sidebar {
     background-color: rgba(221, 221, 221, 0.74);
     width: 150px;
-    height: 90%;
+    height: 80vh;
     position: absolute;
     top: 50px;
     left: 0px;
@@ -74,25 +46,24 @@ li{
 
 /* FOOTER */
 footer{
-    /* background: rgb(117, 207, 240, 1); */
     color: black;
-    height: 6%;
-    width: 100%;
-    /* bottom: 0; */
+    width: 90%;
+    bottom: 0;
     padding: 20px 20px;
     position: absolute;
     display: flex;
     font-size: 12px;
     text-align: center;
+    z-index: 2000;
 }
 
 footer ul{
     display: inline-flex;
     flex: 2;
+    margin: auto;
 }
 
 #statisticsBlock {
-    background-color: rgba(229, 236, 195, 0.521);
     display: block;
     text-align: left;
 }
